tests/rosetta/out/C/benfords-law.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:37:19Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_float concat_list_float(list_float a, list_float b) {
  list_float r = list_float_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static int index_of_string(char *s, char *sub) {
  char *pos = strstr(s, sub);
  if (!pos)
    return -1;
  return pos - s;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
double floorf(double x) { return (double)(((int)(x))); }

int indexOf(char *s, char *ch) {
  int i = 0;
  while (i < strlen(s)) {
    if ((slice_string(s, i, i + 1) == ch)) {
      return i;
    }
    i = i + 1;
  }
  return (-1);
}

const char *fmtF3(double x) {
  double y = floorf(x * 1000.0 + 0.5) / 1000.0;
  char *tmp1 = _str(y);
  const char *s = tmp1;
  int dot = index_of_string(s, ".");
  if (dot == 0 - 1) {
    char *tmp2 = concat_string(s, ".000");
    s = tmp2;
  } else {
    int decs = strlen(s) - dot - 1;
    if (decs > 3) {
      s = slice_string(s, 0, dot + 4);
    } else {
      while (decs < 3) {
        char *tmp3 = concat_string(s, "0");
        s = tmp3;
        decs = decs + 1;
      }
    }
  }
  return s;
}

const char *padFloat3(double x, int width) {
  const char *s = fmtF3(x);
  while (strlen(s) < width) {
    char *tmp4 = concat_string(" ", s);
    s = tmp4;
  }
  return s;
}

list_float fib1000() {
  double a = 0.0;
  double b = 1.0;
  list_float tmp5 = {0, NULL};
  list_float res = tmp5;
  int i = 0;
  while (i < 1000) {
    list_float tmp6 = list_float_create(1);
    tmp6.data[0] = b;
    list_float tmp7 = concat_list_float(res, tmp6);
    res = tmp7;
    double t = b;
    b = b + a;
    a = t;
    i = i + 1;
  }
  return res;
}

int leadingDigit(double x) {
  if (x < 0.0) {
    x = (-x);
  }
  while (x >= 10.0) {
    x = x / 10.0;
  }
  while (x > 0.0 && x < 1.0) {
    x = x * 10.0;
  }
  return (int)(x);
}

int show(list_float nums, char *title) {
  list_int counts = list_int_create(9);
  counts.data[0] = 0;
  counts.data[1] = 0;
  counts.data[2] = 0;
  counts.data[3] = 0;
  counts.data[4] = 0;
  counts.data[5] = 0;
  counts.data[6] = 0;
  counts.data[7] = 0;
  counts.data[8] = 0;
  for (int tmp8 = 0; tmp8 < nums.len; tmp8++) {
    double n = nums.data[tmp8];
    int d = leadingDigit(n);
    if (d >= 1 && d <= 9) {
      counts[d - 1] = counts.data[d - 1] + 1;
    }
  }
  list_float preds = list_float_create(9);
  preds.data[0] = 0.301;
  preds.data[1] = 0.176;
  preds.data[2] = 0.125;
  preds.data[3] = 0.097;
  preds.data[4] = 0.079;
  preds.data[5] = 0.067;
  preds.data[6] = 0.058;
  preds.data[7] = 0.051;
  preds.data[8] = 0.046;
  list_float preds = preds;
  int total = nums.len;
  printf("%s\n", title);
  printf("Digit  Observed  Predicted\n");
  int i = 0;
  while (i < 9) {
    double obs = ((double)(counts.data[i])) / ((double)(total));
    char *tmp9 = _str(i + 1);
    char *tmp10 = concat_string("  ", tmp9);
    char *tmp11 = concat_string(tmp10, "  ");
    const char *line =
        tmp11 + padFloat3(obs, 9) + "  " + padFloat3(preds.data[i], 8);
    printf("%s\n", line);
    i = i + 1;
  }
}

int main() { show(fib1000(), "First 1000 Fibonacci numbers"); }

int main() {
  main();
  return 0;
}
